crates/panels/re_blueprint_tree/tests/snapshots/view_structure_test/no-query/empty.snap
---
source: crates/panels/re_blueprint_tree/tests/view_structure_test.rs
expression: blueprint_tree_data
---
root_container:
  name:
    Placeholder: Grid container
  kind: Grid
  visible: true
  default_open: true
  children:
    - View:
        class_identifier: 3D
        name:
          Placeholder: /
        visible: true
        default_open: false
        origin_tree:
          kind: EmptyOriginPlaceholder
          entity_path: []
          visible: false
          label: / (root)
          highlight_sections: []
          default_open: false
          children: []
        projection_trees: []
