crates/panels/re_blueprint_tree/tests/snapshots/view_structure_test/no-query/multiple_proj.snap
---
source: crates/panels/re_blueprint_tree/tests/view_structure_test.rs
expression: blueprint_tree_data
---
root_container:
  name:
    Placeholder: Grid container
  kind: Grid
  visible: true
  default_open: true
  children:
    - View:
        class_identifier: 3D
        name:
          Placeholder: center/way
        visible: true
        default_open: false
        origin_tree:
          kind: EntityPart
          entity_path:
            - center
            - way
          visible: true
          label: way
          highlight_sections: []
          default_open: false
          children: []
        projection_trees:
          - kind: EntityPart
            entity_path:
              - path
              - to
              - right
            visible: true
            label: right
            highlight_sections: []
            default_open: false
            children: []
          - kind: EntityPart
            entity_path:
              - path
              - to
              - the
            visible: true
            label: the
            highlight_sections: []
            default_open: false
            children:
              - kind: EntityPart
                entity_path:
                  - path
                  - to
                  - the
                  - void
                visible: true
                label: void
                highlight_sections: []
                default_open: false
                children: []
